--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@
     .secao2 {
         height: 850px;
         background: white;
-        width: 100%;
+        width: 99%;
         float: left;
     }
 
@@ -186,15 +186,102 @@
 
     .img-cartao {
         float: left;
-        width: 40%;
-        margin-top: -20px;
-        padding-bottom: 250px;
+        width: 45%;
+        margin-top: 180px;
+        margin-left: 10px;
     }
 
 /* Fim da Seção 2 */
 
 /* Inicio da Seção 3 */
 
-    
+    .secao3 {
+        height: 850px;
+        background: #f5f5f5;
+        width: 100%;
+        float: left;
+    }
+
+    .secao3 h2 {
+        margin-left: 210px;
+        font-family: "Cabin", sans-serif;
+        font-size: 40px;    
+    }
+
+    .secao3 h2 a {
+        text-decoration: none;
+        color: #820ad1;
+    }
+
+    .secao3 h3 {
+        font-family: "Cabin", sans-serif;
+        font-size: 30px;
+        margin-left: 210px;
+    }
+
+    .link3 {
+        font-family: "Cabin", sans-serif;
+        text-decoration: none;
+        margin-left: 210px;
+        font-weight: bold;
+        color: #820ad1
+    }
+
+    .cartao-ultra {
+        float: left;
+        width: 45%;
+        margin-top: 350px;
+    }
+
+    .violeta {
+        float: left;
+        margin-top: 180px;
+        margin-left: 80px;
+    }
 
 /* Fim da Seção 3 */
+
+/* Inicio da Seção 4 */
+
+.secao4 {
+    height: 850px;
+    background: #f5f5f5;
+    width: 100%;
+    float: left;
+    
+}
+
+.secao4 h2 {
+    margin-left: 360px;
+    font-family: "Cabin", sans-serif;
+    color: #820ad1;
+    font-size: 40px;   
+    margin-top: 350px; 
+}
+
+.secao4 h3 {
+    font-family: "Cabin", sans-serif;
+    font-size: 30px;
+    margin-left: 360px;
+}
+
+.link4 {
+    font-family: "Cabin", sans-serif;
+    text-decoration: none;
+    margin-left: 360px;
+    font-weight: bold;
+    color: #820ad1
+}
+
+.nu-cartao {
+    float: left;
+    width: 45%;
+}
+
+.cartao-4 {
+    width: 55%;
+    float: left;
+    margin-top: 180px;
+    
+}
+/* Fim da Seção 4 */
